# QtIFWTest

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_prepare.sh  build_merge.sh  build_separate.sh  create_installer.sh  create_offline_installer.sh  create_online_installer.sh
QtIFWTools/: readme.md
component1/: example.data  main.cpp
config/: aliases.xml  config.xml
docs/: 00-AllInOne.md  01-QtIFW-usage-CreateInstaller.md  AllInOne.md  QtIFWAllInOne.docx  安装记录.md
installer-config/: config.xml
server/: .gitignore  checksum.go  go.mod  main.go  readme.md
server/static/: 2025-04-23-0836_meta.7z  2025-04-23-0934_meta.7z  Updates.xml
server/static/com.vendor.root.component1/: 1.0.0content.7z  1.0.0content.7z.sha1  1.0.0meta.7z  1.1.0content.7z  1.1.0content.7z.sha1  1.2.0content.7z  1.2.0content.7z.sha1  1.2.0meta.7z  1.3.0content.7z  1.3.0content.7z.sha1  1.3.0meta.7z
server/static/com.vendor.root.component1.subcomponent1/: 1.0.0content.7z  1.0.0content.7z.sha1  1.1.0content.7z  1.1.0content.7z.sha1  1.1.0meta.7z  1.2.0content.7z  1.2.0content.7z.sha1  1.2.0meta.7z  1.3.0content.7z  1.3.0content.7z.sha1  1.3.0meta.7z
src/component1/: example.data  main.cpp
src/subcomponent1/: helper.data  helper.h
subcomponent1/: helper.cpp  helper.data
unzip/: CMakeLists.txt  readme.md
unzip/src/: main.cpp
